--- a/CSS/MainFrame.css
+++ b/CSS/MainFrame.css
@@ -1,5 +1,13 @@
 /*************************** Main Frame Style ********************/
+
 .applicationClass {
+}
+
+.applicationContainer {
+	opacity:0;
+	position:absolute;
+	width:100%;
+	min-height:100%;
 	text-align:justify;
 }
 
@@ -10,9 +18,9 @@
 	bottom:0;
 	z-index:998;
 	position:absolute;
-	overflow:auto;
 	float:left;
-/* 	height:100%; */
+	min-width:300px;
+	overflow-y:visible;
 }
 
 .loadingClass {
@@ -25,6 +33,9 @@
 	color:white;
 	display:none;
 	overflow:hidden;
+	z-index:1;
+	position:absolute;
+	width:96%;
 }
 
 .showMoreClass {
