--- a/CSS/Inbox.css
+++ b/CSS/Inbox.css
@@ -1,20 +1,12 @@
 /*** Inbox ***/
 
-.newMessageBotton {
-	position:relative;
-	float:right;
-	right:20px;
-	top:10px;
-	width:150px !important;
-}
-
 .newMessageBoxClass {
 	position:absolute;
 	top:1px;
 	left:1px;
 	right:2px;
 	bottom:2px;
-	background-color:black;
+	background-color:rgba(0,0,0,1);
 	opacity:0;
 	z-index:auto;
 	border-radius:13px;
