--- a/CSS/body.css
+++ b/CSS/body.css
@@ -38,7 +38,7 @@ button, input[type="button"]:hover {
 }
 
 input[type="text"] {
-	width:163px;
+	width:250px;
 	height:14px;
 	min-height:auto;
 	padding:10px 27px 6px 12px;
@@ -47,12 +47,12 @@ input[type="text"] {
 	color:#666;
 	background-color: /*#ccc*/ #ddd;
 	border:0;
-	-webkit-border-radius:13px;
-	-moz-border-radius:13px;
-	-webkit-box-shadow:inset 0 1px 2px rgba(0,0,0,.2);
-	-moz-box-shadow:inset 0 1px 2px rgba(0,0,0,.2);
-	-webkit-transition:all .2s ease-in-out;
-	-moz-transition:all .2s ease-in-out;
+/* 	-webkit-border-radius:13px; */
+/* 	-moz-border-radius:13px; */
+/* 	-webkit-box-shadow:inset 0 1px 2px rgba(0,0,0,.2); */
+/* 	-moz-box-shadow:inset 0 1px 2px rgba(0,0,0,.2); */
+/* 	-webkit-transition:all .2s ease-in-out; */
+/* 	-moz-transition:all .2s ease-in-out; */
 	transition:all .2s ease-in-out;
 	border-radius:13px;	
 	box-shadow:inset 0 1px 2px rgba(0,0,0,.2);	
