--- a/CSS/FilesBox.css
+++ b/CSS/FilesBox.css
@@ -6,8 +6,7 @@
 	background-color:rgba(256,256,256,0.5);
 }
 
-#filedrag
-{
+.fileDragBox,.fileDragBoxHover {
 	display: none;
 	font-weight: bold;
 	text-align: center;
@@ -19,15 +18,12 @@
 	cursor: default;
 }
 
-#filedrag.hover
-{
+.fileDragBoxHover {
 	color: #f00;
 	border-color: #f00;
 	border-style: solid;
 	box-shadow: inset 0 3px 4px #888;
 }
-
-
 
 .filelistItem {
 	font-size:12px;
@@ -36,7 +32,6 @@
 .filelistItemData {
 	font-size:10px;
 }
-
 
 h1, h2
 {
