--- a/CSS/body.css
+++ b/CSS/body.css
@@ -18,11 +18,12 @@ body {
 
 button, input[type="button"] {
 	width:auto;
-	background-color:#ddd;
-	border:1px;
+/* 	background-color:#ddd; */
+	background-color:rgba(255,255,255,0.3);
+	border:solid 1px;
 	border-color:#666;
 	border-radius:13px;
-	height:30px;	
+	min-height:30px;	
 	font-weight:bold;
 	padding-left:10px;
 	padding-right:10px;
@@ -31,10 +32,10 @@ button, input[type="button"] {
 }
 
 button, input[type="button"]:hover {
-	background-color:#eee;
-	border:3px;
+	background-color:rgba(255,255,255,0.7);
+/* 	border:solid 3px; */
 	cursor:pointer;
-	box-shadow:0px 0px 15px rgba(0,0,0,0.4);
+	box-shadow:0px 0px 10px rgba(0,0,0,0.4);
 }
 
 input[type="text"] {
