--- a/CSS/TopBar.css
+++ b/CSS/TopBar.css
@@ -40,9 +40,10 @@
 	float:left;
 }
 
-.eWolf-title {
+.main-eWolf-title {
+	padding-left:15px;
 	float:left;
-	width:200px;
+	width:160px;
 	font-size:40px;
 	font-weight:bold;
 	color:#af9c7c;
