--- a/CSS/Profile.css
+++ b/CSS/Profile.css
@@ -1,5 +1,3 @@
-/*** Profile ***/
-
 .postBox {
 	font-family:Georgia, Times, serif;
 	padding-left:15px;
@@ -45,4 +43,11 @@
 .senderBox:hover {
 	color:blue;
 	text-decoration:underline;
+}
+
+.idBox {
+	font-size:10px;
+	color:#444;
+	font-style:italic;
+	padding-left:5px;
 }
