--- a/CSS/body.css
+++ b/CSS/body.css
@@ -38,7 +38,7 @@ button, input[type="button"]:hover {
 	box-shadow:0px 0px 10px rgba(0,0,0,0.4);
 }
 
-input[type="text"] {
+input[type="text"], input[type="password"] {
 	width:250px;
 	height:14px;
 	min-height:auto;
@@ -48,24 +48,19 @@ input[type="text"] {
 	color:#666;
 	background-color: /*#ccc*/ #ddd;
 	border:0;
-/* 	-webkit-border-radius:13px; */
-/* 	-moz-border-radius:13px; */
-/* 	-webkit-box-shadow:inset 0 1px 2px rgba(0,0,0,.2); */
-/* 	-moz-box-shadow:inset 0 1px 2px rgba(0,0,0,.2); */
-/* 	-webkit-transition:all .2s ease-in-out; */
-/* 	-moz-transition:all .2s ease-in-out; */
 	transition:all .2s ease-in-out;
 	border-radius:13px;	
 	box-shadow:inset 0 1px 2px rgba(0,0,0,.2);	
 	outline: none;
 }
 
-input[type="text"]:focus {
+input[type="text"]:focus, input[type="password"]:focus {
 	color:#444;
 	background-color:#fff;
 }
 
-input[type="text"]:focus::-webkit-input-placeholder {
+input[type="text"]:focus::-webkit-input-placeholder,
+	input[type="password"]:focus::-webkit-input-placeholder {
 	color:#ccc;
 }
 
