--- a/CSS/Inbox.css
+++ b/CSS/Inbox.css
@@ -1,5 +1,3 @@
-/*** Inbox ***/
-
 .preMessageBox {
 	width:30px;
 	font-size:12px;
@@ -13,6 +11,7 @@
 }
 
 .messageBox {
+	text-align:left;
 	font-family:Georgia, Times, serif;
 	padding-left:15px;
 	padding-right:10px;
@@ -30,7 +29,6 @@
 
 .messageList {
 	list-style:none;
-	/*width:400px; */
 	font-family:Georgia, Times, serif;
 	font-size:22px;
 }
