--- a/CSS/NewMail.css
+++ b/CSS/NewMail.css
@@ -15,8 +15,18 @@
 	padding-bottom:50px;
 }
 
+.newMainTable {
+	height:100%;
+	padding-left:12px;
+	padding-top:5px;
+	padding-bottom:5px;
+	padding-right:12px;
+	margin-right:5px;
+}
+
 .newMailAlt {
 	vertical-align:text-top;
 	text-align:right;
 	padding-top:6px;
+	width:1%;
 }
