--- a/CSS/body.css
+++ b/CSS/body.css
@@ -40,12 +40,11 @@ button, input[type="button"]:hover {
 
 input[type="text"], input[type="password"] {
 	width:250px;
-	height:14px;
 	min-height:auto;
-	padding:10px 27px 6px 12px;
+	padding:6px 12px 6px 12px;
 	font-size:16px;
 	line-height:1;
-	color:#666;
+	color:#333;
 	background-color: /*#ccc*/ #ddd;
 	border:0;
 	transition:all .2s ease-in-out;
@@ -55,42 +54,38 @@ input[type="text"], input[type="password"] {
 }
 
 input[type="text"]:focus, input[type="password"]:focus {
-	color:#444;
+	color:black;
 	background-color:#fff;
 }
 
-input[type="text"]:focus::-webkit-input-placeholder,
-	input[type="password"]:focus::-webkit-input-placeholder {
-	color:#ccc;
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  color: #999;
+  font-style:italic;
+}
+input:-moz-placeholder, textarea:-moz-placeholder {
+  color: #999;
+  font-style:italic;
 }
 
-textarea {
-	min-height:auto;
-	padding:10px 27px 6px 12px;
-	font-size:16px;
-	line-height:1;
-	color:#666;
-	background-color: /*#ccc*/ #ddd;
+textarea, .textarea-div {
+	background-color:rgba(200,200,200,0.5);
 	border:0;
-	-webkit-border-radius:13px;
-	-moz-border-radius:13px;
-	-webkit-box-shadow:inset 0 1px 2px rgba(0,0,0,.2);
-	-moz-box-shadow:inset 0 1px 2px rgba(0,0,0,.2);
-	-webkit-transition:all .2s ease-in-out;
-	-moz-transition:all .2s ease-in-out;
-	transition:all .2s ease-in-out;
-	border-radius:13px;	
-	box-shadow:inset 0 1px 2px rgba(0,0,0,.2);	
-	outline: none;
+	width:100%;
+	height:100%;
+	font-size:14px;
+	line-height:1;
+	color:#333;
+	padding:6px 6px 6px 6px;
+	border-radius:13px;
+	white-space: pre-wrap;
+	word-break:break-all;
+	word-wrap:break-word;
+	text-align:left;
 }
 
-textarea:focus {
-	color:#444;
-	background-color:#fff;
-}
-
-textarea:focus::-webkit-input-placeholder {
-	color:#ccc;
+textarea:focus, .textarea-div:focus {
+	color:black;
+	background-color:rgba(255,255,255,0.5);
 }
 
 .howling-back {
