--- a/CSS/Menu.css
+++ b/CSS/Menu.css
@@ -76,11 +76,16 @@
 	min-height:0!important;
 	background-color:rgba(0,0,0,0.9);
 	color:white;
+	
 	margin-right:2px;
+	margin-top:2px;
+	
 	padding-right:2px;
-	padding-left:2px;
+	padding-left:0px;
+	
 	position:relative;
-	top:-5px;
+	width:20px;
+	height:20px;	
 }
 
 .refreshButton {
