- Added some styles - Changes popup to be a context and not a base class - changes PopUp to Popup - Added PendeingRquests and PendingApprovalList

--- a/CSS/GeneralClass.css
+++ b/CSS/GeneralClass.css
@@ -42,6 +42,11 @@
 	font-style:italic;
 	font-weight:normal !important;
 	padding-left:5px;
+	padding-top:0;
+	padding-bottom:0;
+	margin-top:0;
+	margin-bottom:0;
 	word-wrap:break-word;
 	white-space:pre-line;
+	display:inline-block;
 }
