--- a/CSS/Menu.css
+++ b/CSS/Menu.css
@@ -74,10 +74,10 @@
 #btnShowMenu, #btnHideMenu {
 	border:none;
 	min-height:0!important;
-	background-color:rgba(0,0,0,0.9);
+/* 	background-color:rgba(0,0,0,0.9); */
 	color:white;
 	
-	margin-right:2px;
+	margin-right:1px;
 	margin-top:2px;
 	
 	padding-right:2px;
@@ -85,7 +85,14 @@
 	
 	position:relative;
 	width:20px;
-	height:20px;	
+	height:20px;
+	
+	align:middle;
+}
+
+#btnUnPin, #btnPin {
+	margin-right:1px;
+	align:middle;
 }
 
 .refreshButton {
@@ -97,12 +104,11 @@
 	cursor:pointer;
 }
 
-.refreshButtonArea {
+.menuItemExtraInfoArea {
 	/*display:none;*/
 	width:20px !important;
 	height:20px !important;
 	float:right;
-	padding-top:5px;
 	padding-right:5px;
 }
 
