--- a/CSS/Menu.css
+++ b/CSS/Menu.css
@@ -15,7 +15,6 @@
 	padding:5px 0 0 0;
 	font-size:20px;
 	color:black;
-	font-family:Arial;
 	
 	top:45px;right:0;left:-35px;z-index:999;
 	position:fixed;	
@@ -39,7 +38,7 @@
 
 #menu {
 	width:200px;
-	font-family:Georgia, Times, serif;
+/* 	font-family:"Times New Roman", Times, serif; */
 	font-size:15px;
 }
 
