--- a/CSS/body.css
+++ b/CSS/body.css
@@ -5,6 +5,8 @@ html,body {
 	margin:0px;
 	padding:0px;
 	background-color: /*#f6f4f5*/ #E6EBEA;
+	font-family:"Serif",serif;
+	font-size:16px;
 }
 
 body {
