--- a/CSS/Profile.css
+++ b/CSS/Profile.css
@@ -9,7 +9,7 @@
 	margin-bottom:5px;
 	font-size:16px;
 	color:black;
-	background:rgba(254, 255, 155, 0.65); R, G, B, A
+	background:rgba(254, 255, 155, 0.65);
 	border-bottom-right-radius:15px;
 	border-bottom-left-radius:15px;
 }
