change images to static_files

--- a/CSS/Inbox.css
+++ b/CSS/Inbox.css
@@ -48,6 +48,6 @@
 
 .messageListItem:hover {
 	color:#FFFFFF;
-	background-image:url(hover.png);
+	background-image:url(/static_files/hover.png);
 	background-repeat:repeat-x;
 }
